(#7) Fix Background Fill Bug on Small Screen - Remove static height setting to allow fluid box

--- a/default.scss
+++ b/default.scss
@@ -327,7 +327,6 @@ header {
     padding-right: 0;
     padding-left: 0;
     width: 100%;
-    height: 250px;
     background-color: white;
     color: $secondary-gray;
     vertical-align: middle;
